[extension-manager] It's now possible to install and use a component with all its dependencies !
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/contrib/sandbox@31019 f329d543-caf0-0310-9063-dda96c69346f